--- a/node_webapp.conf
+++ b/node_webapp.conf
@@ -1,34 +1,66 @@
-description "Node webapp template"
+escription "Generic Node WebApp Init Script"
 
-start on filesystem or runlevel [2345]
+#start on filesystem or runlevel [2345]
 stop on runlevel [!2345]
 
-respawn limit 2 5
+respawn limit 3 5
 
-# Required param. Usage:
-#   sudo start myscript ENV=dev
-#   sudo stop myscript ENV=dev".
-# One of 'dev', 'qa', 'client', 'prod'. 
-instance $ENV
+# Service name and app environment (one of `dev`, `qa`, `client`, `prod`).
+# Delimited by '#'.
+# Example: salsitasoft.com#dev
+instance $INST
 
 script
-    # Port that the webapp should run on.
+    # Parse the instance stanza value.
+    SERVICE=`echo $INST | cut -d '#' -f 1`
+    ENV=`echo $INST | cut -d '#' -f 2`
+
+    if [ -z ${SERVICE} ]; then
+        echo "Could not determine the service name from ${INST}. Should be service#env"
+        exit 1
+    fi
+
+    if [ -z ${ENV} ]; then
+        echo "Could not determine the environment from ${INST}. Should be service#env"
+        exit 1
+    fi
+
+    DOCKER="docker -H tcp://127.0.0.1"
+    # `DATA_DIR` is where we persist data from the container.
+    DATA_DIR=/var/lib/jenkins/${SERVICE}-${ENV}/data
+    IMAGE_TAG=${SERVICE}-${ENV}
+
+    mkdir -p ${DATA_DIR}
+
+    # Load web app defaults (e.g. base port settings).
+    . /etc/default/${SERVICE}
+
+    echo "port base " $PORT_BASE
+
+    # Determine which port to run app on.
+    if [ "${ENV}" = 'dev' ]; then
+        PORT=${PORT_BASE};
+    fi
+    if [ "${ENV}" = 'qa' ]; then
+        PORT=`expr ${PORT_BASE} + 1`
+    fi
+    if [ "${ENV}" = 'client' ]; then
+        PORT=`expr ${PORT_BASE} + 2`
+    fi
+    if [ "${ENV}" = 'prod' ]; then
+        PORT=`expr ${PORT_BASE} + 3`;
+    fi
+
     if [ -z ${PORT} ]; then
-        PORT=3000;
+        echo "Could not determine port to run the app on. Did you define PORT_BASE in /etc/default/${SERVICE}?"
+        exit 1
     fi;
 
-    # Build the docker image (very fast if the image exists already).
-    DOCKER="docker -H tcp://127.0.0.1"
-    MNT="/srv/deployment/salsitasoft.com/${ENV}/"
-    mkdir -p "${MNT}/log"
-    cd ${MNT}/deploy
-    IMAGE=$($DOCKER build . | tail -1 | awk '{ print $NF }')
+    SSH_PORT=`expr ${PORT} + 20000`
 
-    echo "Docker image built. ID: " ${IMAGE}    
-
-    echo "Starting on port ${PORT} in env ${ENV}"
+    echo "Starting app ${SERVICE} on port ${PORT} with env '${ENV}'."
 
     # Start the docker container and run `make run` to start the webapp.
-    $DOCKER run -p ${PORT}:3000 -e PROJECT_HOME="/mnt/project" -e NODE_ENV=$ENV -v "$MNT:/mnt/project" -w "/mnt/project/deploy" $IMAGE /bin/bash -c "make run"
-end script
+    $DOCKER run -p ${PORT}:3000 -p ${SSH_PORT}:22 -e NODE_ENV=${ENV} -w '/srv/project/deploy' -v "${DATA_DIR}:/data" ${IMAGE_TAG} /bin/bash -c "make run"
 
+end script
