--- a/start-nodes.conf
+++ b/start-nodes.conf
@@ -6,27 +6,13 @@ stop on runlevel [!2345]
 task
 
 script
-  DOCKER="docker -H tcp://127.0.0.1"
-
-  # Soooo...this is stupid. But Docker Upstart script seems broken and
-  # when it sends the `started` event, Docker is not ready to accept
-  # connections. So we implemented a hacky workaround (we sleep until
-  # Docker's ready).
-
-  echo "Determining if docker is running..."
-  set +e; ${DOCKER} ps; RC=$?; set -e
-  echo "${RC} (anything non-zeroish means no)."
-
-  while [ ${RC} -ne 0 ]; do
-    echo "I'm going to sleep a little bit now and then I'll try again, aaaight?"
-    sleep 5
-    set +e; ${DOCKER} ps; RC=$?; set -e
-  done
-
-  echo "Twas' bout time. Docker up and running."
+  . /etc/default/docker
+  sh /etc/init/docker_wait.sh
 
   # Find any images of our deployable services.
   IMAGES=$($DOCKER images | cut -d " " -f 1 | grep '\-dev$\|\-qa$\|\-client$\|\-prod$')
+
+  ulimit -n 65535
 
   echo "Images found:"
   echo  ${IMAGES}
@@ -35,5 +21,6 @@ script
     INST=`echo ${IMG} | sed 's/\(.*\)-\(.*\)$/\1#\2/'`
     echo "Starting node web app, instance ${INST} ..."
     start node-webapp INST=${INST} || true
+    sleep 0.2
   done
 end script
