--- a/node_webapp.conf
+++ b/node_webapp.conf
@@ -1,4 +1,4 @@
-escription "Generic Node WebApp Init Script"
+description "Generic Node WebApp Init Script"
 
 #start on filesystem or runlevel [2345]
 stop on runlevel [!2345]
@@ -25,7 +25,7 @@ script
         exit 1
     fi
 
-    DOCKER="docker -H tcp://127.0.0.1"
+    DOCKER="docker -H tcp://127.0.0.1:4245"
     # `DATA_DIR` is where we persist data from the container.
     DATA_DIR=/var/lib/jenkins/${SERVICE}-${ENV}/data
     IMAGE_TAG=${SERVICE}-${ENV}
@@ -33,9 +33,15 @@ script
     mkdir -p ${DATA_DIR}
 
     # Load web app defaults (e.g. base port settings).
-    . /etc/default/${SERVICE}
+    . /etc/default/deploy-${SERVICE}
 
     echo "port base " $PORT_BASE
+
+    if [ -z ${DOCKER_OPTS} ]; then
+        DOCKER_OPTS=''
+    fi
+
+    echo "DOCKER_OPST set to: " ${DOCKER_OPTS}
 
     # Determine which port to run app on.
     if [ "${ENV}" = 'dev' ]; then
@@ -61,6 +67,10 @@ script
     echo "Starting app ${SERVICE} on port ${PORT} with env '${ENV}'."
 
     # Start the docker container and run `make run` to start the webapp.
-    $DOCKER run -p ${PORT}:3000 -p ${SSH_PORT}:22 -e NODE_ENV=${ENV} -w '/srv/project/deploy' -v "${DATA_DIR}:/data" ${IMAGE_TAG} /bin/bash -c "make run"
+    $DOCKER run \
+      -p ${PORT}:3000 -p ${SSH_PORT}:22 \
+      -e NODE_ENV=${ENV} \
+      -w '/srv/project/deploy' -v "${DATA_DIR}:/data" \
+      ${DOCKER_OPTS} ${IMAGE_TAG} /bin/bash -c "make run"
 
 end script
